src/objects/inscor__Request_Item__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Request_Replys2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>inscor__Company__c</referenceTo>
        <relationshipName>Request_Replies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>inscor__PO_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PO Line</label>
        <referenceTo>inscor__Purchase_Order_Line__c</referenceTo>
        <relationshipName>Request_Replys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__PO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PO</label>
        <referenceTo>inscor__Purchase_Order__c</referenceTo>
        <relationshipName>Request_Replys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__RFQ_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RFQ Line</label>
        <referenceTo>inscor__RFQ_Line__c</referenceTo>
        <relationshipName>Request_Replys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__RFQ__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RFQ</label>
        <referenceTo>inscor__RFQ__c</referenceTo>
        <relationshipName>Request_Replys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__RO_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RO Line</label>
        <referenceTo>inscor__Repair_Order_Line__c</referenceTo>
        <relationshipName>Request_Replys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__RO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RO</label>
        <referenceTo>inscor__Repair_Order__c</referenceTo>
        <relationshipName>Request_Replys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Recommended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recommended?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request</label>
        <referenceTo>inscor__Request__c</referenceTo>
        <relationshipName>Request_Replys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Response_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Response By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Request_Replys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Response_For__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Response For</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Request_Replys1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Responded</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__WO_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WO Line</label>
        <referenceTo>inscor__Work_Order_Task__c</referenceTo>
        <relationshipName>Request_Replys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__WO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WO</label>
        <referenceTo>inscor__Work_Order__c</referenceTo>
        <relationshipName>Request_Replys</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Request Item</label>
    <nameField>
        <displayFormat>RRID-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>